--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ plugins {
 group 'com.nikecow'
 version '1.0'
 sourceCompatibility = JavaVersion.current()
-
 targetCompatibility = sourceCompatibility
 
 //Custom attributes TODO: https://github.com/nebula-plugins/gradle-info-plugin/blob/master/README.md replace
@@ -20,6 +19,7 @@ def mainClass = 'com.nikecow.yahtzee.gui.Main'
 def groovyVersionString = "2.4.6"
 def vendor = 'nikecow.com'
 def title = 'Yahtzee'
+def fullName = 'Nico van Duuren'
 
 task wrapper(type: Wrapper) {
     gradleVersion = "2.14-rc-5";
@@ -36,6 +36,7 @@ contacts {
 jar {
     exclude("design")
     manifest {
+        attributes 'Full-Name': fullName
         attributes 'Title': title
         attributes 'Main-Class': mainClass
 //        atrributes 'Git': //TODO: Add git version
